--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,10 @@ services:
       dockerfile: Dockerfile
     container_name: app
     restart: always
-    command: sh -c "gunicorn --bind 0.0.0.0:8000 avtoelon.wsgi:application"
+    command: >
+      sh -c "python manage.py makemigrations && 
+      python manage.py migrate 
+      && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/usr/src/app
       - ./media:/usr/src/app/media
